# ligature-in-memory

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  build.sbt  index.ts  package-lock.json  package.json  project.clj  settings.gradle.kts  test.ts  tsconfig.json
src/: index.ts  lib.rs
src/main/kotlin/dev/ligature/memory/: InMemory.kt
src/main/kotlin/org/almibe/ligature/inmemory/: InMemoryDataset.kt  InMemoryStore.kt  LigatureInMemory.kt
src/main/kotlin/org/libraryweasel/ligature/memory/: InMemory.kt  Library.kt
src/main/scala/dev/ligature/memory/: InMemory.scala
src/main/scala/dev/ligature/store/common/: CommonStore.scala  Prefixes.scala
src/main/scala/dev/ligature/store/inmemory/: Common.scala  InMemoryKeyValueStore.scala  InMemoryReadTx.scala  InMemoryWriteTx.scala  LigatureInMemory.scala
src/main/scala/dev/ligature/store/keyvalue/: Common.scala  Decoder.scala  Encoder.scala  Encoders.scala  Encoding.scala  KeyValueOperations.scala  KeyValueReadTx.scala  KeyValueStore.scala  KeyValueWriteTx.scala  Prefixes.scala  ReadOperations.scala  WriteOperations.scala
src/main/scala/dev/ligature/store/memory/: InMemory.scala
src/org.libraryweasel.ligature.memory/: core.clj
src/org/libraryweasel/ligature/memory/: store.clj
src/test/kotlin/dev/ligature/memory/: InMemorySpec.kt
src/test/scala/dev/ligature/memory/: InMemorySpec.scala
src/test/scala/dev/ligature/store/inmemory/: EncodingSpec.scala  (+2 more)
test/: test.ts
test/org.libraryweasel.ligature.memory/: core_test.clj
test/org/libraryweasel/ligature/memory/: store_test.clj
tests/: test.rs  tests.rs
(+48 files in other folders)
