[package]
name = "ligature-kv"
version = "0.1.0-SNAPSHOT"
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A common library to help with storing Ligature data in a key-value store."
repository = "https://github.com/almibe/ligature-kv/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = { path = "../ligature" }
